--- a/charts/sample-app/templates/service.yaml
+++ b/charts/sample-app/templates/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: sample-app
-  name: sample-app
+    app: {{ .Release.Name }}
+  name: {{ .Release.Name }}
 spec:
   ports:
   - name: http
@@ -11,4 +11,4 @@ spec:
     protocol: TCP
     targetPort: {{ .Values.service.port }}
   selector:
-    app: sample-app
+    app: {{ .Release.Name }}
