--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -1,7 +1,7 @@
 alertmanager:
   ## If false, alertmanager will not be installed
   ##
-  enabled: false
+  enabled: true
 
   ## alertmanager container name
   ##
@@ -26,19 +26,19 @@ alertmanager:
   ingress:
     ## If true, alertmanager Ingress will be created
     ##
-    enabled: false
+    enabled: true
 
     ## alertmanager Ingress annotations
     ##
-    annotations: {}
-    #   kubernetes.io/ingress.class: nginx
+    annotations:
+      kubernetes.io/ingress.class: nginx
     #   kubernetes.io/tls-acme: 'true'
 
     ## alertmanager Ingress hostnames
     ## Must be provided if Ingress is enabled
     ##
-    hosts: []
-    #   - alertmanager.domain.com
+    hosts:
+      - alertmanager.example.com
 
     ## alertmanager Ingress TLS configuration
     ## Secrets must be manually created in the namespace
@@ -57,7 +57,7 @@ alertmanager:
     ## If true, alertmanager will create/use a Persistent Volume Claim
     ## If false, use emptyDir
     ##
-    enabled: true
+    enabled: false
 
     ## alertmanager data Persistent Volume access modes
     ## Must match those of existing PV or dynamic provisioner
@@ -501,30 +501,58 @@ pushgateway:
 alertmanagerFiles:
   alertmanager.yml: |-
     global:
+      smtp_smarthost: 'localhost:25'
+      smtp_from: 'alertmanager@example.com'
       # slack_api_url: ''
 
     receivers:
       - name: default-receiver
+        email_configs:
+          - to: 'prometheus@mailinator.com'
         # slack_configs:
         #  - channel: '@you'
         #    send_resolved: true
 
     route:
       group_wait: 10s
-      group_interval: 5m
+      group_interval: 10s
       receiver: default-receiver
       repeat_interval: 3h
 
 ## Prometheus server ConfigMap entries
 ##
 serverFiles:
-  alerts: ""
+  alerts: |-
+    ALERT NodeMemoryUsage
+      IF (((node_memory_MemTotal-node_memory_MemFree-node_memory_Cached)/(node_memory_MemTotal)*100)) > 30
+      FOR 1m
+      LABELS {
+        severity="page"
+      }
+      ANNOTATIONS {
+        SUMMARY = "{{$labels.instance}}: High memory usage detected",
+        DESCRIPTION = "{{$labels.instance}}: Memory usage is above 75% (current value is: {{ $value }})"
+      }
+
+    ALERT TooMany404
+      IF failures > 20
+      FOR 5s
+      LABELS {
+        severity="error"
+      }
+      ANNOTATIONS {
+        SUMMARY = "{{$labels.app}}: High error rate detected",
+        DESCRIPTION = "{{$labels.app}}: current error rate is {{ $value }}"
+      }
   rules: ""
 
   prometheus.yml: |-
     rule_files:
       - /etc/config/rules
       - /etc/config/alerts
+    global:
+      scrape_interval: 5s
+      scrape_timeout: 5s
 
     scrape_configs:
       - job_name: prometheus
